--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
 
@@ -20,14 +20,14 @@
         android:theme="@style/AppTheme.ToolBar" />
 
     <view
+        android:id="@+id/recycleAlarmList"
+        class="android.support.v7.widget.RecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="android.support.v7.widget.RecyclerView"
-        android:id="@+id/recycleAlarmList"
         android:layout_below="@+id/toolbar"
-        android:scrollbars="vertical"
+        android:clipToPadding="false"
         android:paddingBottom="16dp"
-        android:clipToPadding="false"/>
+        android:scrollbars="vertical" />
 
     <ListView
         android:id="@+id/alarmGroups"
@@ -39,7 +39,7 @@
         android:choiceMode="singleChoice"
         android:clickable="true"
         android:nestedScrollingEnabled="false"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/actionCreate"
