--- a/app/src/main/res/layout/alarm_group_card.xml
+++ b/app/src/main/res/layout/alarm_group_card.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/alarmGroupCard"
     style="@style/CardView"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentEnd="true"
-    android:layout_marginTop="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:layout_marginTop="16dp"
     android:divider="@color/default_divider_color_light"
     android:measureWithLargestChild="false"
     android:showDividers="middle">
 
     <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <TableRow
             android:layout_width="match_parent"
@@ -37,7 +35,7 @@
                     android:elegantTextHeight="false"
                     android:focusableInTouchMode="false"
                     android:text="@string/alarmGroupName"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
 
                 <TextView
                     android:id="@+id/groupType"
@@ -47,7 +45,7 @@
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/groupName"
                     android:text="@string/alarmGroupType"
-                    android:textAppearance="?android:attr/textAppearanceSmall"/>
+                    android:textAppearance="?android:attr/textAppearanceSmall" />
             </RelativeLayout>
 
         </TableRow>
@@ -62,7 +60,7 @@
                 android:layout_height="1dip"
                 android:layout_weight="1"
                 android:background="@color/default_divider_color_light"
-                android:padding="2dip"/>
+                android:padding="2dip" />
         </TableRow>
 
         <TableRow
@@ -76,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
-                android:text="@string/enabled"/>
+                android:text="@string/enabled" />
         </TableRow>
     </TableLayout>
 </android.support.v7.widget.CardView>
