--- a/app/src/main/res/menu/menu_alarm_group.xml
+++ b/app/src/main/res/menu/menu_alarm_group.xml
@@ -1,8 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context="concentric.medalarm.activity.AlarmGroupActivity">
-    <item android:id="@+id/save"
-          android:title="@string/save"
-          app:showAsAction="ifRoom|withText"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="concentric.medalarm.activity.AlarmGroupActivity">
+    <item
+        android:id="@+id/save"
+        android:title="@string/save"
+        app:showAsAction="ifRoom|withText" />
 </menu>
