--- a/app/src/main/res/layout/alarm_group_card.xml
+++ b/app/src/main/res/layout/alarm_group_card.xml
@@ -16,16 +16,22 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:clickable="false"
+        android:measureWithLargestChild="false">
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:id="@+id/cardDetails"
+            android:background="?attr/selectableItemBackground">
 
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="8dp">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:layout_column="0"
+                android:clickable="false">
 
                 <TextView
                     android:id="@+id/groupName"
@@ -48,35 +54,93 @@
                     android:layout_below="@+id/groupName"
                     android:text="@string/alarmGroupType"
                     android:textAppearance="?android:attr/textAppearanceSmall"/>
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageButton"
+                    android:src="@drawable/ic_expand_more_black_24dp"
+                    style="@android:style/Widget.Material.ImageButton"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentStart="false"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="@string/expand"
+                    android:layout_alignBottom="@+id/groupType"/>
+
             </RelativeLayout>
 
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            >
 
             <View
                 android:id="@+id/line1"
-                android:layout_width="match_parent"
+                android:layout_width="fill_parent"
                 android:layout_height="1dip"
-                android:layout_weight="1"
                 android:background="@color/default_divider_color_light"
-                android:padding="2dip"/>
+                android:padding="2dip"
+                android:layout_column="0"/>
         </TableRow>
 
         <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
             android:gravity="left"
-            android:padding="8dp">
+            >
 
-            <Switch
-                android:id="@+id/switch1"
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:text="@string/enabled"/>
+                android:layout_column="0"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp">
+
+                <Switch
+                    android:id="@+id/enabled"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.AppCompat.CompoundButton.Switch"
+                    android:layout_gravity="left"
+                    android:layout_centerVertical="true"
+                    android:padding="8dp"/>
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editAlarm"
+                    android:src="@drawable/ic_edit_black_24dp"
+                    style="@android:style/Widget.Material.ImageButton"
+                    android:contentDescription="@string/edit_alarm"
+                    android:background="@android:color/transparent"
+                    android:layout_toStartOf="@+id/deleteAlarm"
+                    android:layout_toLeftOf="@+id/deleteAlarm"
+                    android:layout_centerVertical="true"
+                    android:cropToPadding="false"
+                    android:clickable="true"
+                    android:padding="8dp"/>
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/deleteAlarm"
+                    android:src="@drawable/ic_delete_black_24dp"
+                    android:longClickable="false"
+                    style="@android:style/Widget.Material.ImageButton"
+                    android:contentDescription="@string/deleteAlarm"
+                    android:background="@android:color/transparent"
+                    android:adjustViewBounds="false"
+                    android:cropToPadding="false"
+                    android:layout_alignParentStart="false"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="16dp"
+                    android:clickable="true"
+                    android:padding="8dp"/>
+            </RelativeLayout>
+
         </TableRow>
     </TableLayout>
 </android.support.v7.widget.CardView>
