AlarmGroupManager not working yet.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,8 @@
         android:layout_below="@+id/toolbar"
         android:clipToPadding="false"
         android:paddingBottom="16dp"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:scrollbarThumbVertical="@drawable/custom_scroll_style"
         android:scrollbars="vertical" />
 
     <ListView
