--- a/app/src/main/res/layout/alarm_group_card.xml
+++ b/app/src/main/res/layout/alarm_group_card.xml
@@ -54,14 +54,15 @@
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/imageButton"
+                    android:id="@+id/expandCollapse"
                     android:src="@drawable/ic_expand_more_black_24dp"
                     style="@android:style/Widget.Material.ImageButton"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="false"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/expand"
-                    android:layout_alignBottom="@+id/groupType"/>
+                    android:layout_alignBottom="@+id/groupType"
+                    />
 
             </RelativeLayout>
 
@@ -70,10 +71,10 @@
         <TableRow
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            >
+            android:id="@+id/line">
 
             <View
-                android:id="@+id/line1"
+                android:id="@+id/lineItem"
                 android:layout_width="fill_parent"
                 android:layout_height="1dip"
                 android:layout_weight="1"
@@ -85,7 +86,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="left"
-            android:padding="8dp">
+            android:padding="8dp"
+            android:id="@+id/controls"
+            >
 
             <RelativeLayout
                 android:layout_width="wrap_content"
