Fix for the cards.

--- a/app/src/main/res/layout/alarm_group_card.xml
+++ b/app/src/main/res/layout/alarm_group_card.xml
@@ -92,7 +92,8 @@
             android:gravity="left"
             android:padding="8dp"
             android:id="@+id/controls"
-            android:animateLayoutChanges="false">
+            android:animateLayoutChanges="false"
+            android:visibility="gone">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
