--- a/app/src/main/res/layout/activity_edit__daily__alarm.xml
+++ b/app/src/main/res/layout/activity_edit__daily__alarm.xml
@@ -1,6 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="concentric.medalarm.activity.Edit_Daily_Alarm">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         style="@style/AppTheme.ToolBar"
@@ -15,21 +17,13 @@
         android:background="@color/primary"
         android:elevation="4dp"
         android:theme="@style/AppTheme.ToolBar" />
-    <EditText
-        android:id="@+id/alarmName"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="15dp"
-        android:capitalize="words"
-        android:hint="@string/name"
-        android:inputType="textCapWords"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        android:paddingTop="15dp" />
 
-    <!-- THIS IS THE ADD BUTTON -->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbar"
+        android:layout_alignParentBottom="true"></RelativeLayout>
+
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/addTime"
         android:layout_width="wrap_content"
@@ -44,4 +38,5 @@
         app:elevation="@dimen/fab_button_elevation"
         app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
         app:rippleColor="@color/colorPrimaryDark" />
+
 </RelativeLayout>
