--- a/app/src/main/res/layout/activity_alarm_group.xml
+++ b/app/src/main/res/layout/activity_alarm_group.xml
@@ -30,9 +30,9 @@
             android:id="@+id/alarmName"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="5dp"
             android:capitalize="words"
             android:hint="@string/name"
             android:inputType="textCapWords"
@@ -47,9 +47,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/alarmName"
             android:layout_centerHorizontal="true"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="5dp"
             android:prompt="@string/alarmType"
             android:spinnerMode="dropdown" />
 
@@ -61,7 +61,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:animateLayoutChanges="true"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <ListView
                 android:id="@+id/dailyAlarmList"
@@ -80,7 +80,6 @@
                 android:onClick="timePickerClicker"
                 android:src="@drawable/ic_add_white_48dp"
                 app:borderWidth="0dp"
-                app:elevation="@dimen/fab_button_elevation"
                 app:pressedTranslationZ="@dimen/fab_translation_z_pressed"
                 app:rippleColor="@color/colorPrimaryDark" />
 
