--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,7 +20,7 @@
     </style>
 
     <style name="AppTheme.FloatingActionButton" parent="Widget.AppCompat.ActionButton">
-
+        <item name="android:elevation">10dp</item>
     </style>
 
     <style name="FullscreenTheme" parent="android:Theme.NoTitleBar">
@@ -43,6 +43,13 @@
         <item name="android:background">@drawable/material_button</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">20dp</item>
+        <item name="android:elevation">10dp</item>
+    </style>
+
+    <style name="ImageButtonStyle" parent="android:Widget.Button">
+        <item name="android:background">@drawable/material_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:elevation">10dp</item>
     </style>
 
     <!-- Backward-compatible version of ?android:attr/buttonBarButtonStyle -->
