--- a/app/src/main/res/layout/alarm_group_card.xml
+++ b/app/src/main/res/layout/alarm_group_card.xml
@@ -57,14 +57,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/expandCollapse"
-                    android:src="@drawable/ic_expand_less_black_24dp"
-                    style="@android:style/Widget.Material.ImageButton"
+                    android:src="@drawable/ic_expand_more_black_24dp"
+                    style="@style/ImageButtonStyle"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentStart="false"
                     android:background="@android:color/transparent"
                     android:contentDescription="@string/expand"
                     android:layout_alignBottom="@+id/groupType"
-                    />
+                    android:elevation="0dp"/>
 
             </RelativeLayout>
 
@@ -116,7 +116,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/editAlarm"
                     android:src="@drawable/ic_edit_black_24dp"
-                    style="@android:style/Widget.Material.ImageButton"
+                    style="@style/ImageButtonStyle"
                     android:contentDescription="@string/edit_alarm"
                     android:background="?attr/selectableItemBackground"
                     android:layout_toStartOf="@+id/deleteAlarm"
@@ -132,7 +132,7 @@
                     android:id="@+id/deleteAlarm"
                     android:src="@drawable/ic_delete_black_24dp"
                     android:longClickable="false"
-                    style="@android:style/Widget.Material.ImageButton"
+                    style="@style/ImageButtonStyle"
                     android:contentDescription="@string/deleteAlarm"
                     android:background="?attr/selectableItemBackground"
                     android:adjustViewBounds="false"
