--- a/app/src/main/res/layout/activity_alarm_group.xml
+++ b/app/src/main/res/layout/activity_alarm_group.xml
@@ -51,7 +51,8 @@
             android:layout_marginRight="16dp"
             android:layout_marginTop="5dp"
             android:prompt="@string/alarmType"
-            android:spinnerMode="dropdown" />
+            android:spinnerMode="dropdown"
+            android:visibility="gone" />
 
         <RelativeLayout
             android:id="@+id/DailyAlarms"
@@ -61,7 +62,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:animateLayoutChanges="true"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <ListView
                 android:id="@+id/dailyAlarmList"
