--- a/app/src/main/res/layout/custom_list_view.xml
+++ b/app/src/main/res/layout/custom_list_view.xml
@@ -34,8 +34,12 @@
         android:layout_marginRight="16dp"
         android:layout_marginTop="5dp"
         android:contentDescription="@string/delete"
-        android:src="@drawable/ic_white_trash"
-        android:visibility="invisible" />
+        android:src="@drawable/ic_delete_black_24dp"
+        android:visibility="invisible"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true"
+        style="@style/ImageButtonStyle"
+        android:padding="8dp"/>
 
     <android.widget.ImageButton
         android:id="@+id/edit_btn"
@@ -46,7 +50,11 @@
         android:layout_toLeftOf="@id/delete_btn"
         android:layout_toStartOf="@id/delete_btn"
         android:contentDescription="@string/edit"
-        android:src="@drawable/ic_edit_white_48dp"
-        android:visibility="invisible" />
+        android:src="@drawable/ic_edit_black_24dp"
+        android:visibility="invisible"
+        android:background="?attr/selectableItemBackground"
+        android:padding="8dp"
+        android:clickable="true"
+        style="@style/ImageButtonStyle"/>
 
 </RelativeLayout>
