--- a/app/src/main/res/layout/activity_alarm_group.xml
+++ b/app/src/main/res/layout/activity_alarm_group.xml
@@ -54,13 +54,23 @@
             android:spinnerMode="dropdown"
             android:visibility="gone" />
 
+        <android.support.v7.widget.AppCompatSpinner
+            android:id="@+id/ringtoneSpinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/alarmName"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_toEndOf="@+id/AlarmType"
+            android:layout_toRightOf="@+id/AlarmType" />
+
         <RelativeLayout
             android:id="@+id/DailyAlarms"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:layout_below="@+id/AlarmType"
+            android:layout_below="@+id/ringtoneSpinner"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
             android:animateLayoutChanges="true"
             android:visibility="visible">
 
