--- a/app/src/main/res/menu/menu_edit__daily__alarm.xml
+++ b/app/src/main/res/menu/menu_edit__daily__alarm.xml
@@ -2,6 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="concentric.medalarm.activity.Edit_Daily_Alarm">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/save"
+        android:title="@string/save"
+        app:showAsAction="ifRoom|withText" />
 </menu>
