--- a/app/src/main/res/layout/activity_edit__daily__alarm.xml
+++ b/app/src/main/res/layout/activity_edit__daily__alarm.xml
@@ -41,7 +41,15 @@
             android:id="@+id/dailyAlarmList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@+id/alarmName"/>
+            android:layout_below="@+id/ringtoneSpinner" />
+
+        <Spinner
+            android:id="@+id/ringtoneSpinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/alarmName"
+            android:layout_alignStart="@+id/alarmName"
+            android:layout_below="@+id/alarmName" />
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
