Finished the alarm sound stuff android.

--- a/app/src/main/res/layout/activity_edit__daily__alarm.xml
+++ b/app/src/main/res/layout/activity_edit__daily__alarm.xml
@@ -45,7 +45,7 @@
 
         <Spinner
             android:id="@+id/ringtoneSpinner"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/alarmName"
             android:layout_alignStart="@+id/alarmName"
