--- a/app/src/main/res/layout/custom_list_view.xml
+++ b/app/src/main/res/layout/custom_list_view.xml
@@ -24,6 +24,7 @@
 
     <android.widget.ImageButton
         android:id="@+id/delete_btn"
+        style="@style/ImageButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
@@ -33,28 +34,27 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="5dp"
-        android:contentDescription="@string/delete"
-        android:src="@drawable/ic_delete_black_24dp"
-        android:visibility="invisible"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
-        style="@style/ImageButtonStyle"
-        android:padding="8dp"/>
+        android:contentDescription="@string/delete"
+        android:padding="8dp"
+        android:src="@drawable/ic_delete_black_24dp"
+        android:visibility="invisible" />
 
     <android.widget.ImageButton
         android:id="@+id/edit_btn"
+        style="@style/ImageButtonStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_margin="5dp"
         android:layout_toLeftOf="@id/delete_btn"
         android:layout_toStartOf="@id/delete_btn"
-        android:contentDescription="@string/edit"
-        android:src="@drawable/ic_edit_black_24dp"
-        android:visibility="invisible"
         android:background="?attr/selectableItemBackground"
-        android:padding="8dp"
         android:clickable="true"
-        style="@style/ImageButtonStyle"/>
+        android:contentDescription="@string/edit"
+        android:padding="8dp"
+        android:src="@drawable/ic_edit_black_24dp"
+        android:visibility="invisible" />
 
 </RelativeLayout>
