--- a/app/src/main/res/layout/custom_list_view.xml
+++ b/app/src/main/res/layout/custom_list_view.xml
@@ -17,10 +17,9 @@
         android:layout_marginTop="5dp"
         android:layout_toLeftOf="@+id/edit_btn"
         android:layout_toStartOf="@+id/edit_btn"
-        android:gravity="center"
         android:singleLine="true"
         android:textSize="@dimen/abc_text_size_large_material"
-        android:textStyle="bold" />
+        android:gravity="left"/>
 
     <android.widget.ImageButton
         android:id="@+id/delete_btn"
